# lichtblick

./: .env  .gitignore  LICENSE  README.md  frontend_app.py  pyproject.toml  run_backend.py  test.db
backend/: api.py  database.py  schemas.py  storage_imagekit.py  users.py
